--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,10 @@
   <body>
     <div class="main">
       <nav class="navbar bg-dark text-white">
-        <span class="navbar-brand mb-0 h1">Navbar</span>
+        <span class="navbar-brand mb-0 h1">Agenda - Contactos</span>
+        <!-- <span class="navbar-brand mb-0 h1">Agenda - Nuevo</span>
+        <span class="navbar-brand mb-0 h1">Agenda - Editar</span> -->
+
       </nav>
 
       <div class="row p-0 m-0">
@@ -59,14 +62,56 @@
                   <div class="nav nav-tabs" id="nav-tab" role="tablist">
                     <a class="nav-link active" id="nav-contact-tab" data-toggle="tab" href="#nav-contact" role="tab" aria-controls="nav-contact" aria-selected="true">Contacto</a>
                     <a class="nav-link" id="nav-address-tab" data-toggle="tab" href="#nav-address" role="tab" aria-controls="nav-address" aria-selected="false">Direccion</a>
-                    <a class="nav-link" id="nav-phone-tab" data-toggle="tab" href="#nav-phone" role="tab" aria-controls="nav-phone" aria-selected="false">Telefono</a>
+                    <a class="nav-link" id="nav-phone-tab" data-toggle="tab" href="#nav-phone" role="tab" aria-controls="nav-phone" aria-selected="false">Telefonos</a>
                   </div>
                 </nav>
 
                 <div class="tab-content" id="nav-tabContent">
                   <div class="tab-pane fade show active" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">...</div>
 
-                  <div class="tab-pane fade" id="nav-address" role="tabpanel" aria-labelledby="nav-address-tab">...</div>
+                  <div class="tab-pane fade" id="nav-address" role="tabpanel" aria-labelledby="nav-address-tab">
+                    <div class="row p-0 m-0">
+                        <div class="form-row px-0 py-0 pt-3 m-0">
+                          <div class="form-group col-12 col-md-4">
+                            <label for="inputStreet">Calle*</label>
+                            <input type="text" class="form-control" id="inputStreet">
+                          </div>
+
+                          <div class="form-group col-6 col-md-4">
+                            <label for="inputNumExt">Numero exterior*</label>
+                            <input type="text" class="form-control" id="inputNumExt">
+                          </div>
+
+                        <div class="form-group col-6 col-md-4">
+                          <label for="inputNumInt">Numero interior*</label>
+                          <input type="text" class="form-control" id="inputNumInt">
+                        </div>
+
+                        <div class="form-group col-12 col-sm-4">
+                          <label for="inputCol">Colonia*</label>
+                          <input type="text" class="form-control" id="inputCol">
+                        </div>
+
+                          <div class="form-group col-12 col-sm-4">
+                            <label for="inputMuni">Municipio*</label>
+                            <input type="text" class="form-control" id="inputMuni">
+                          </div>
+
+                          <div class="form-group col-12 col-sm-4">
+                            <label for="inputState">Estado*</label>
+                            <select id="inputState" class="form-control">
+                              <option selected>Choose...</option>
+                              <option>...</option>
+                            </select>
+                          </div>
+
+                          <div class="form-group col-12">
+                            <label for="FormControlRef">Referencias*</label>
+                            <textarea class="form-control" id="FormControlRef" rows="3"></textarea>
+                          </div>
+                        </div>
+                    </div>
+                  </div>
 
                   <div class="tab-pane fade" id="nav-phone" role="tphone" aria-labelledby="nav-phone-tab">
                     <div class="row p-0 m-0">
@@ -76,7 +121,7 @@
                     </div>
 
                     <div class="row p-0 m-0">
-                      <div class="form-row">
+                      <div class="form-row px-0 py-0 pt-3 m-0">
                         <div class="form-group col-12 col-md-3">
                           <label for="inlineFormCustomSelect">Tipo*</label>
                           <select class="custom-select mr-5" id="inlineFormCustomSelect">
@@ -153,14 +198,10 @@
                           <a class="btn btn-outline-danger col-8" href="#" role="button">Cancelar</a>
                         </div>
                       </div>
-
                     </div>
-
                   </div>
                 </div>
               </div>
-
-
             </div>
 
             <div class="form__footer py-3 px-4 bg-light">
