--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,33 @@
 
                 <div class="tab-content" id="nav-tabContent">
                   <div class="tab-pane fade show active" id="nav-contact" role="tabpanel" aria-labelledby="nav-contact-tab">
-                    
+                    <div class="row p-0 m-0 block-overflow block-overflow--contact">
+                      <div class="form-row px-0 py-0 pt-3 m-0">
+                        <div class="form-group col-12 col-md-6">
+                          <label for="inputStreet">Nombres*</label>
+                          <input type="text" class="form-control" id="inputStreet">
+                        </div>
+
+                        <div class="form-group col-12 col-md-6">
+                          <label for="inputNumExt">Apellidos*</label>
+                          <input type="text" class="form-control" id="inputNumExt">
+                        </div>
+
+                        <div class="form-group col-12">
+                          <label for="InputNombres">Fotografia*</label>
+                      
+                          <div class="custom-file">
+                            <input type="file" class="custom-file-input" id="customFile">
+                            <label class="custom-file-label" for="customFile">---</label>
+                          </div>
+                        </div>
+
+                        <div class="form-group col-12">
+                          <label for="InputApellidos">Fecha de nacimiento</label>
+                          <input id="datepicker" />
+                        </div>
+                      </div>
+                    </div>
                   </div>
 
                   <div class="tab-pane fade" id="nav-address" role="tabpanel" aria-labelledby="nav-address-tab">
@@ -299,7 +325,7 @@
         </div>
       </div>
 
-      <div class="py-3 bar bar--footer position-absolute bg-light"></div>
+      <div class="py-3 bar bar--footer position-fixed bg-light"></div>
     </div>
 
     <script src="{% static 'jquery/jquery-3.6.0.min.js' %}"></script>
