--- a/templates/editContact.html
+++ b/templates/editContact.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+  Editar Contacto
+{% endblock title %}
+
 {% block title_agenda %}
   <span class="navbar-brand mb-0 h1">Agenda - Editar</span>
 {% endblock title_agenda %}
@@ -10,6 +14,7 @@
   <div class="row p-0 m-0">
     <div class="col-12 row p-0 pt-4 m-0 justify-content-center">
       <form class="form-container border rounded col-11 col-lg-6 p-0">
+        {% csrf_token %} 
         <div class="form__body py-3 px-4">
           <div class="">
             <nav>
